--- a/index.html
+++ b/index.html
@@ -103,13 +103,23 @@
         </div>
 
         <!-- instagram section -->
-        
+
         <div class="insta-head">
-            <h3 class="insta-head-header">Our Featured Flowers</h3>
-            <p class="insta-head-Discription">It is a long established fact that a reader will be <br> distracted by the readable content of a page when looking at its layout.</p>
+            <h3 class="insta-head-header">Instagram</h3>
+            <p class="insta-head-Discription">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
         </div>
 
-
+        <!-- Products section -->
+        <div class="products">
+            <div class="pro">
+                <div class="pro-hblock">
+                    <div class="pro-block"><img src="Flower Asset/Rectangle 3.png" alt="" class="products-block-img"></div>
+                    <div class="pro-block"><img src="Flower Asset/Rectangle 4.png" alt="" class="products-block-img"></div>
+                    <div class="pro-block"><img src="Flower Asset/Rectangle 5.png" alt="" class="products-block-img"></div>
+                    <div class="pro-block"><img src="Flower Asset/Rectangle 6.png" alt="" class="products-block-img"></div>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 </html>
