Banner and team section compleate

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>My Flower Shop</title>
 </head>
 <body>
@@ -71,15 +72,15 @@
                 </div>
                 <div class="adv-hblock">
                     <div class="adv-block">
-                        <img src="icon/flower 1.png" alt="" class="adv-block-img">
-                        <p class="adv-block-text"> Fresh Flowers. Local Growers.</p>
+                        <img src="icon/flower 1.png" alt="" class="adv-block-img">  
                     </div>
+                    <p class="adv-block-text"> Fresh Flowers. Local Growers.</p>
                 </div>
                 <div class="adv-hblock">
                     <div class="adv-block">
                         <img src="icon/customer-service 1.png" alt="" class="adv-block-img">
-                        <p class="adv-block-text">24/7 Free Support.</p>
                     </div>
+                    <p class="adv-block-text">24/7 Free Support.</p>
                 </div>
             </div>
         </div>
@@ -117,6 +118,62 @@
                     <div class="pro-block"><img src="Flower Asset/Rectangle 4.png" alt="" class="products-block-img"></div>
                     <div class="pro-block"><img src="Flower Asset/Rectangle 5.png" alt="" class="products-block-img"></div>
                     <div class="pro-block"><img src="Flower Asset/Rectangle 6.png" alt="" class="products-block-img"></div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Banner section -->
+
+        <div class="banner">
+            <div class="banner-items">
+                <h2 class="banner-header">Get The Latest Deals</h2>
+                <p class="banner-discription">$30 coupon for first shopping</p>
+                <div class="banner-input">
+                    <input placeholder="Enter Email" class="banner-input-email" type="email" name="">
+                    <button class="banner-input-btn" type="button" name="myButton">Subscribe</button>
+                </div>
+            </div>
+        </div>
+
+        <!-- team section-->
+
+        <h2 class="team-t">Our Team</h2>
+
+        <div class="team">
+            <div class="team-hcon">
+                <div class="team-container">
+                    <img src="team/per-1.png" alt="" class="team-cont-img">
+                    <div class="team-cont-card">
+                        <h2 class="team-card-head">Cecile J. Coplin</h2>
+                        <p class="team-card-title">CEO & Founder</p>
+                        <p class="team-card-dis">4692 New York Avenue <br>
+                            Burbank, CA 91502
+                        </p>
+                        <p class="team-card-email">CecileJCoplin@rhyta.com</p>
+                        <button class="team-card-btn" type="button">contact</button>
+                    </div>
+                </div>
+                <div class="team-container">
+                    <img src="team/per-2.png" alt="" class="team-cont-img">
+                    <div class="team-cont-card">
+                        <h2 class="team-card-head">Alain Artemyeva</h2>
+                        <p class="team-card-title">General Manager</p>
+                        <p class="team-card-dis">3774 Heavner Court <br>
+                            Levittown, NY 11756</p>
+                        <p class="team-card-email">AlainArtemyeva@dayrep.com</p>
+                        <button class="team-card-btn" type="button"> contact</button>
+                    </div>
+                </div>
+                <div class="team-container">
+                    <img src="team/per-3.png" alt="" class="team-cont-img">
+                    <div class="team-cont-card">
+                        <h2 class="team-card-head">Vladislav Kruglov</h2>
+                        <p class="team-card-title">Director</p>
+                        <p class="team-card-dis">2432 Bassell Avenue <br>
+                            Little Rock, AR 72002</p>
+                        <p class="team-card-email">VladislavKruglov@rhyta.com</p>
+                        <button class="team-card-btn" type="button">Contact</button>
+                    </div>
                 </div>
             </div>
         </div>
