--- a/index.html
+++ b/index.html
@@ -178,5 +178,11 @@
             </div>
         </div>
     </main>
+    <footer>
+        <h1 class="fotter-tittle"><span class="footer-span">Flower</span>Shop</h1>
+        <p class="footer-discription">It is a long established fact that a reader will be distracted by the readable <br>
+             content of a page when looking at its layout.</p>
+        <p class="footer-copyright">@2020-2023, FlowerShop.com. All rights reserved. </p>
+    </footer>
 </body>
 </html>
